--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   <i class="fas fa-star star"></i>
                 </div>
                 <h5 class="text-primary">Regina Miles</h5>
-                <h5>Banker</h5>
+                <h5>Bankerr</h5>
               </div>
             </div>
           </div>
